<resources>
    <string name="app_name">NPC Generator</string>
    <string name="generate_random_npc">Generate Random NPC</string>
    <string name="save_npc">Save NPC</string>
    <string name="NPCnav">NPC Generator This Way</string>
    <string name="enemyNav">Enemy Generator This Way</string>
    <string name="generate_new_npc">Generate New NPC</string>
    <string name="save_this_npc">Save This NPC</string>
    <string name="your_previously_saved_npcs">Your Previously Saved NPCs:</string>
    <string name="delete_npc_fragment">Are you sure you would like to delete this NPC?</string>
    <string name="delete_enemy_fragment">Are you sure you would like to delete this Enemy?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="refresh">Refresh</string>
    <string name="clear">Clear NPCs</string>
    <string name="clear_npc_question">Are you sure? Doing this will delete all of your NPCs from the list.</string>
    <string name="clear_enemy_question">Are you sure? Doing this will delete all of your Enemies from the list.</string>
    <string name="your_previously_saved_enemies">Your Previously Saved Enemies:</string>
    <string name="generate_new_enemy">Generate New Enemy</string>
    <string name="clearEnemy">Clear Enemies</string>
    <string name="save_this_enemy">Save This Enemy</string>
    <string name="constitution">Constitution</string>
    <string name="typePrompt">Choose a Monster Type:</string>
    <string name="welcome_message">Welcome to the NPC Generator! Following the buttons will take you to either the NPC Generator or the Enemy Generator. Have Fun!</string>

    <string-array name="types">
        <item>Imp</item>
        <item>Sprite</item>
        <item>Bandit</item>
        <item>Goblin</item>
        <item>Orc</item>
        <item>Werewolf</item>
        <item>Minotaur</item>
        <item>Ogre</item>
        <item>Fire Giant</item>
        <item>Treant</item>
        <item>Dragon</item>
        <item>Nightcrawler</item>
    </string-array>

    <string-array name="numbers">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
    </string-array>

</resources>
