<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/newEnemy"
        android:title="@string/generate_new_enemy"
        android:icon="@android:drawable/ic_input_add"
        android:showAsAction="always"
        tools:ignore="AppCompatResource" />
    <item
        android:id="@+id/refreshEnemy"
        android:title="@string/refresh"
        android:icon="@android:drawable/ic_menu_rotate"
        android:showAsAction="always"
        tools:ignore="AppCompatResource" />
    <item
        android:id="@+id/clearEnemy"
        android:title="@string/clearEnemy"
        android:icon="@android:drawable/ic_delete"
        android:showAsAction="always"
        tools:ignore="AppCompatResource" />

</menu>