<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/newNPC"
        android:title="@string/generate_new_npc"
        android:icon="@android:drawable/ic_input_add"
        app:showAsAction="always"
        tools:ignore="AppCompatResource" />
    <item
        android:id="@+id/refresh"
        android:title="@string/refresh"
        android:icon="@android:drawable/ic_menu_rotate"
        app:showAsAction="always"
        tools:ignore="AppCompatResource" />
    <item
        android:id="@+id/clear"
        android:title="@string/clear"
        android:icon="@android:drawable/ic_delete"
        app:showAsAction="always"
        tools:ignore="AppCompatResource" />

</menu>