<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_hub"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="mobilegroup1.npcgenerator.HubActivity">

    <TextView
        android:text="@string/welcome_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:id="@+id/welcomeView"
        android:textSize="18sp"
        android:textColor="@android:color/black"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:text="@string/NPCnav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:id="@+id/npcNavButton"
        android:onClick="navigateToNPC"
        android:layout_below="@+id/welcomeView"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/enemyNav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        android:id="@+id/enemyNavButton"
        android:layout_below="@id/npcNavButton"
        android:layout_centerHorizontal="true"
        android:onClick="navigateToEnemy"/>


</RelativeLayout>
